@@ -1,8 +1,8 @@
 MCS = gmcs
 MCS_FLAGS = -langversion:linq
 
-Mono.Rocks.dll: Mono.Rocks.dll.sources
-	$(MCS) -t:library -r:System.Core -out:Mono.Rocks.dll $(MCS_FLAGS) @Mono.Rocks.dll.sources
+Mono.Rocks.dll: Mono.Rocks.dll.sources $(shell cat Mono.Rocks.dll.sources)
+	$(MCS) -debug+ -t:library -r:System.Core -out:Mono.Rocks.dll $(MCS_FLAGS) @Mono.Rocks.dll.sources
 
 all: Mono.Rocks.dll
 
@@ -11,7 +11,7 @@ clean:
 
 run-test:
 
-Mono.Rocks.Tests.dll: Mono.Rocks.Tests.dll.sources
+Mono.Rocks.Tests.dll: Mono.Rocks.Tests.dll.sources $(shell cat Mono.Rocks.Tests.dll.sources)
 	$(MCS) -r:Mono.Rocks.dll -r:System.Core -pkg:mono-nunit -t:library -out:Mono.Rocks.Tests.dll $(MCS_FLAGS) @Mono.Rocks.Tests.dll.sources
 
 run-test: Mono.Rocks.Tests.dll
